force-app/main/default/objects/Activity__c/fields/Type_of_Activity__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Activity__c</fullName>
    <label>Type of Activity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nano Meet</fullName>
            </value>
            <value>
                <fullName>Mega Meet</fullName>
            </value>
            <value>
                <fullName>Delight Studio</fullName>
            </value>
            <value>
                <fullName>Factory Tour</fullName>
            </value>
            <value>
                <fullName>SSC Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>