force-app/main/default/objects/Activity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type_of_Activity__c</columns>
    <columns>Event_Start_Date__c</columns>
    <columns>Event_End_Date__c</columns>
    <columns>Remarks__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>